--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,13 @@
 # misc
 .DS_Store
 .env.local
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
